add team add modify other entity for attribut usine

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -133,9 +133,9 @@
 						<div class="mt-2">
 							<label for="prototypeName" class="form-label">Usine de montage</label>
 							<select id="factory" class="form-select" aria-label="Default select example">
-							  <option value="x">Usine Tremery</option>
-							  <option value="y">Atelier Carrieres sous Poissy</option>
-							  <option value="z">Usine Valencienne</option>
+							  <option value="X">Usine Tremery</option>
+							  <option value="Y">Atelier Carrieres sous Poissy</option>
+							  <option value="Z">Usine Valencienne</option>
 							</select>
 						</div>
 						<div class="mt-2" id="prototypeMsg">
@@ -206,6 +206,7 @@
 <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 <script src="/webjars/js-joda/dist/js-joda.min.js"></script>
 <script type="text/javascript" src="/vis.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.8/dist/sweetalert2.all.min.js"></script>
 <!--<script type="text/javascript" src="//unpkg.com/vis-timeline@latest/dist/vis-timeline-graph2d.min.js"></script>-->
 <script type="text/javascript" src="/app.js"></script>
 
